--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -1,9 +1,25 @@
 {
+    "loadingMessages": [
+        "GOING AROUND THE LEAGUE WITH ISH SMITH...",
+        "PROCESSING.......................",
+        "TRYING TO CONNECT TO AU'S INTERNET...",
+        "GETTING BUZZED RESPONSIBLY...",
+        "WAITING FOR DARIO TO COME OVER...",
+        "WORKING THE MARGINS...",
+        "RECOVERING FROM GASTROENTERITIS...",
+        "KLUMPY-FLUMPING...",
+        "SEARCHING FOR JJ'S SOCIAL MEDIA...",
+        "LOOKING FOR THE REAL ERIC JR..."],
 	"pages": [
 		{
 			"name": "Home",
 			"link": "https://www.rightstorickysanchez.com",
 			"type": "homepage"
+            "announcement":
+            {
+                "title": "Join the Bark in the Park team!"
+                "url": "https://www.firstgiving.com/team/391999"
+            }
 		},
 		{
 			"name": "About",
@@ -40,5 +56,9 @@
             "link": "https://crackedbellphl.com/collections/rights-to-ricky-sanchez",
             "type": "externallink"
         }
-	]
+	],
+    "moreItems": [
+        "About",
+        "Newsletter",
+        "T-Shirt Store",]
 }
