--- a/RTRS/RTRS/Info.plist
+++ b/RTRS/RTRS/Info.plist
@@ -48,5 +48,7 @@
 	</array>
 	<key>RTRSBaseURL</key>
 	<string>https://www.rightstorickysanchez.com/</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
