Add PinCacheImage, first pass at NSCoding archiving and unarchiving

--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -6,6 +6,7 @@ def all_pods
   pod 'FLEX', '~> 2.4', :configurations => ['debug']
   pod 'SwiftSoup', '2.2.0'
   pod 'Atributika', '4.8.2'
+  pod 'PINRemoteImage'
 
 
 end
