Add fixes to article web view, begin implementing the deep link handler

--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -33,7 +33,11 @@
 		},
         {
             "name": "If Not, Pick Will Convey As Two Second-Rounders",
-            "link": "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders",
+            "links": ["https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders",
+                    "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1557225162492",
+                    "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1549539821493",
+                    "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1537799312931",
+                    "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1525602099530"],
             "type": "contentlist"
         },
         {
