Add Spotify Framework, some changes for custom Ricky nav bar

--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -9,7 +9,8 @@
         "RECOVERING FROM GASTROENTERITIS...",
         "KLUMPY-FLUMPING...",
         "SEARCHING FOR JJ'S SOCIAL MEDIA...",
-        "LOOKING FOR THE REAL ERIC JR..."],
+        "LOOKING FOR THE REAL ERIC JR...",
+        "ANALYZING TWEETS FROM VARIOUS BURNER ACCOUNTS USING MACHINE LEARNING ALGORITHMS..."],
 	"pages": [
 		{
 			"name": "Home",
