--- a/RTRS/RTRS/Info.plist
+++ b/RTRS/RTRS/Info.plist
@@ -20,6 +20,21 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>spotify</string>
+    </array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>com.spotify.iOS-SDK-Quick-Start</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>spotify-ios-quick-start</string>
+            </array>
+        </dict>
+    </array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
