--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -7,7 +7,8 @@ def all_pods
   pod 'SwiftSoup', '2.2.0'
   pod 'Atributika', '4.8.2'
   pod 'PINRemoteImage'
-
+  pod 'Firebase'
+  pod 'Firebase/Messaging'
 
 end
 
