Super in-progress commit... Firebase notifications, marquee label, podcast VC and player implementation

--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -9,6 +9,8 @@ def all_pods
   pod 'PINRemoteImage'
   pod 'Firebase'
   pod 'Firebase/Messaging'
+  pod 'FirebaseInstanceID', '2.0.0'
+  pod 'MarqueeLabel'
 
 end
 
