Add external web browser, changed updatted progress, buncha stuff

--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -16,6 +16,7 @@
 			"name": "Home",
 			"link": "https://www.rightstorickysanchez.com",
 			"type": "homepage",
+            "lastUpdate": 1572919354,
             "announcement":
             {
                 "title": "Join the Bark in the Park team!",
@@ -25,11 +26,13 @@
 		{
 			"name": "About",
 			"link": "https://www.rightstorickysanchez.com/about",
-			"type": "descriptionPage"
+			"type": "descriptionPage",
+            "lastUpdate": 1572919354
 		},
 		{
             "name": "The Pod",
             "type": "multimedia",
+            "lastUpdate": 1572919354,
             "links": ["https://www.rightstorickysanchez.com/podcast",
                     "https://www.rightstorickysanchez.com/podcast?offset=1563022800515",
                     "https://www.rightstorickysanchez.com/podcast?offset=1557717089396",
@@ -52,30 +55,32 @@
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1549539821493",
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1537799312931",
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1525602099530"],
-            "type": "contentlist"
+            "type": "contentlist",
+            "lastUpdate": 1572919354
         },
         {
             "name": "Newsletter",
             "link": "https://www.rightstorickysanchez.com/newsletter",
-            "type": "textform"
-        },
-        {
-            "name": "Subscribe",
-            "link": "https://www.rightstorickysanchez.com/subscribe",
-            "type": "multimedia"
+            "type": "externallink",
+            "lastUpdate": 1572919354
         },
         {
             "name": "Process Pups",
             "link": "https://www.rightstorickysanchez.com/processpups",
-            "type": "contentlist"
+            "type": "contentlist",
+            "lastUpdate": 1572919354
         },
         {
             "name": "T-Shirt Store",
             "link": "https://crackedbellphl.com/collections/rights-to-ricky-sanchez",
-            "type": "externallink"
+            "type": "externallink",
+            "lastUpdate": 1572919354
         }
 	],
-    "podSource": "https://spikeeskin.libsyn.com/rss",
+    "podSource": {
+        "url": "https://spikeeskin.libsyn.com/rss",
+        "lastUpdate": 1572919354
+    }
     "moreItems": [
         "About",
         "Newsletter",
