Still confused about MPCommandCenter

--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -8,7 +8,7 @@
         "WORKING THE MARGINS...",
         "RECOVERING FROM GASTROENTERITIS...",
         "KLUMPY-FLUMPING...",
-        "SEARCHING FOR JJ'S SOCIAL MEDIA...",
+        "ARGUING WITH DOUBTERS ABOUT COVINGTON'S VALUE...",
         "LOOKING FOR THE REAL ERIC JR...",
         "ANALYZING TWEETS FROM VARIOUS BURNER ACCOUNTS USING MACHINE LEARNING ALGORITHMS..."],
 	"pages": [
