--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -16,7 +16,7 @@
 			"name": "Home",
 			"link": "https://www.rightstorickysanchez.com",
 			"type": "homepage",
-            "lastUpdate": 1574199068,
+            "lastUpdate": 1574199069,
             "announcement":
             {
                 "title": "Join the Bark in the Park team!",
@@ -32,7 +32,7 @@
 		{
             "name": "The Pod",
             "type": "multimedia",
-            "lastUpdate": 1574199068,
+            "lastUpdate": 1574199069,
             "links": ["https://www.rightstorickysanchez.com/podcast",
                     "https://www.rightstorickysanchez.com/podcast?offset=1563022800515",
                     "https://www.rightstorickysanchez.com/podcast?offset=1557717089396",
@@ -56,7 +56,7 @@
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1537799312931",
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?offset=1525602099530"],
             "type": "contentlist",
-            "lastUpdate": 1574199068
+            "lastUpdate": 1574199069
         },
         {
             "name": "Newsletter",
@@ -68,7 +68,7 @@
             "name": "Process Pups",
             "link": "https://www.rightstorickysanchez.com/processpups",
             "type": "contentlist",
-            "lastUpdate": 1574199068
+            "lastUpdate": 1574199069
         },
         {
             "name": "T-Shirt Store",
@@ -79,10 +79,11 @@
 	],
     "podSource": {
         "url": "https://spikeeskin.libsyn.com/rss",
-        "lastUpdate": 1574199068
+        "lastUpdate": 1574199069
     },
     "moreItems": [
         "About",
+        "Process Pups",
         "Newsletter",
         "T-Shirt Store"]
 }
