--- a/RTRS/RTRS/Info.plist
+++ b/RTRS/RTRS/Info.plist
@@ -50,6 +50,7 @@
 	<array>
 		<string>audio</string>
 		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
