--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -10,13 +10,13 @@
         "KLUMPY-FLUMPING...",
         "ARGUING WITH DOUBTERS ABOUT COVINGTON'S VALUE...",
         "LOOKING FOR THE REAL ERIC JR...",
-        "ANALYZING TWEETS FROM VARIOUS BURNER ACCOUNTS USING MACHINE LEARNING ALGORITHMS..."],
+        "NEEDLESSLY GETTING SHOTS UP AT 3AM..."],
 	"pages": [
 		{
 			"name": "Home",
 			"link": "https://www.rightstorickysanchez.com",
 			"type": "homepage",
-            "lastUpdate": 1574199069,
+            "lastUpdate": 1574199070,
             "announcement":
             {
                 "title": "Join the Bark in the Park team!",
@@ -32,7 +32,7 @@
 		{
             "name": "The Pod",
             "type": "multimedia",
-            "lastUpdate": 1574199069,
+            "lastUpdate": 1574199070,
             "links": ["https://www.rightstorickysanchez.com/podcast",
                     "https://www.rightstorickysanchez.com/podcast?offset=1563022800515",
                     "https://www.rightstorickysanchez.com/podcast?offset=1557717089396",
@@ -68,7 +68,7 @@
             "name": "Process Pups",
             "link": "https://www.rightstorickysanchez.com/processpups",
             "type": "contentlist",
-            "lastUpdate": 1574199069
+            "lastUpdate": 1574199070
         },
         {
             "name": "T-Shirt Store",
@@ -79,7 +79,7 @@
 	],
     "podSource": {
         "url": "https://spikeeskin.libsyn.com/rss",
-        "lastUpdate": 1574199069
+        "lastUpdate": 1574199070
     },
     "moreItems": [
         "About",
