--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -8,6 +8,7 @@ def all_pods
   pod 'Atributika', '4.8.2'
   pod 'PINRemoteImage'
   pod 'Firebase'
+  pod 'Firebase/Analytics'
   pod 'Firebase/Messaging'
   pod 'FirebaseInstanceID', '2.0.0'
   pod 'MarqueeLabel'
