First beta release???

--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -10,7 +10,8 @@
         "KLUMPY-FLUMPING...",
         "ARGUING WITH DOUBTERS ABOUT COVINGTON'S VALUE...",
         "LOOKING FOR THE REAL ERIC JR...",
-        "NEEDLESSLY GETTING SHOTS UP AT 3AM..."],
+        "NEEDLESSLY GETTING SHOTS UP AT 3AM...",
+        "COUNTING THE NUMBER OF TIMES THE SHOT HIT THE RIM..."],
 	"pages": [
 		{
 			"name": "Home",
