--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -10,6 +10,7 @@ def all_pods
   pod 'Firebase'
   pod 'Firebase/Analytics'
   pod 'Firebase/Messaging'
+  pod 'Firebase/Database'
   pod 'FirebaseInstanceID', '2.0.0'
   pod 'MarqueeLabel'
 
