--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -12,6 +12,7 @@ def all_pods
   pod 'Firebase/Messaging'
   pod 'Firebase/Database'
   pod 'FirebaseInstanceID', '2.0.0'
+  pod 'Firebase/AdMob'
   pod 'MarqueeLabel'
 
 end
