--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -6,13 +6,14 @@ def all_pods
   pod 'FLEX', '~> 2.4', :configurations => ['debug']
   pod 'SwiftSoup', '2.2.0'
   pod 'Atributika', '4.8.2'
-  pod 'PINRemoteImage'
+  pod 'PINRemoteImage', '2.1.4'
   pod 'Firebase'
   pod 'Firebase/Analytics'
   pod 'Firebase/Messaging'
   pod 'Firebase/Database'
   pod 'FirebaseInstanceID', '2.0.0'
   pod 'MarqueeLabel'
+  pod 'MKToolTip'
 
 end
 
