--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -13,23 +13,26 @@
         "NEEDLESSLY GETTING SHOTS UP AT 3AM...",
         "COUNTING THE NUMBER OF TIMES THE SHOT HIT THE RIM...",
         "GOING TO NAPA VALLEY TO SEE IF BEN AND JO ARE THERE..."],
-	"pages": [
-		{
-			"name": "Home",
-			"link": "https://www.rightstorickysanchez.com",
-			"type": "homepage",
+    "pages": [
+        {
+            "name": "Home",
+            "link": "https://www.rightstorickysanchez.com/front-page",
+            "type": "homepage",
+            "ignoreTitles": [
+                "SPIKE: REMEMBERING KOBE BRYANT [1978-2020]"
+            ],
             "announcement":
             {
                 "title": "Join the Bark in the Park team!",
                 "url": "https://www.firstgiving.com/team/391999"
             }
-		},
-		{
-			"name": "About",
-			"link": "https://www.rightstorickysanchez.com/about",
-			"type": "descriptionPage",
-		},
-		{
+        },
+        {
+            "name": "About",
+            "link": "https://www.rightstorickysanchez.com/about",
+            "type": "descriptionPage",
+        },
+        {
             "name": "The Pod",
             "type": "multimedia",
             "ignoreTitles": ["Rights To Ricky Sanchez Providence Animal Center Bark In The Park 5K Team",
@@ -43,8 +46,8 @@
                 "Contest: Get Engaged At The Lottery Party With LL Pavorsky",
                 "2017 Process, Hinkie Related Christmas Gifts",
                 "Bus The Process II: Rights To Ricky Sanchez Bus Trip To D.C. (F*ck Andrew Sharp)",
-                "Apply To Be A Fan Representative In The Retweet Armageddon Congress"
-                
+                "Apply To Be A Fan Representative In The Retweet Armageddon Congress",
+                "Spike: Remembering Kobe Bryant"
             ],
             "links": ["https://www.rightstorickysanchez.com/podcast",
                     "https://www.rightstorickysanchez.com/podcast?page=2",
@@ -61,7 +64,7 @@
                     "https://www.rightstorickysanchez.com/podcast?page=13",
                     "https://www.rightstorickysanchez.com/podcast?page=14",
                     "https://www.rightstorickysanchez.com/podcast?page=15"]
-		},
+        },
         {
             "name": "If Not, Pick Will Convey As Two Second-Rounders",
             "links": ["https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders",
@@ -91,7 +94,7 @@
             "link": "https://crackedbellphl.com/collections/rights-to-ricky-sanchez",
             "type": "externallink",
         }
-	],
+    ],
     "podSource": {
         "url": "https://spikeeskin.libsyn.com/rss",
         "ignoreTitles": [
