LOts of fixes and optimizations

--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -65,7 +65,8 @@
                     "https://www.rightstorickysanchez.com/podcast?page=14",
                     "https://www.rightstorickysanchez.com/podcast?page=15",
                     "https://www.rightstorickysanchez.com/podcast?page=16",
-                    "https://www.rightstorickysanchez.com/podcast?page=17"]
+                    "https://www.rightstorickysanchez.com/podcast?page=17",
+                    "https://www.rightstorickysanchez.com/podcast?page=18"]
         },
         {
             "name": "If Not, Pick Will Convey As Two Second-Rounders",
@@ -75,12 +76,14 @@
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?page=4",
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?page=5",
                     "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?page=6",
-                    "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?page=7"],
+                    "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?page=7",
+                    "https://www.rightstorickysanchez.com/if-not-will-convey-as-two-second-rounders?page=8"],
             "type": "contentlist",
         },
         {
             "name": "Sixers Adam: Normal Column",
-            "links": ["https://www.rightstorickysanchez.com/normal-column"],
+            "links": ["https://www.rightstorickysanchez.com/normal-column",
+                    "https://www.rightstorickysanchez.com/normal-column?page=2"],
             "type": "contentlist"
         },
         {
