--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -6,7 +6,7 @@ def all_pods
   pod 'FLEX', '~> 2.4', :configurations => ['debug']
   pod 'SwiftSoup', '2.2.0'
   pod 'Atributika', '4.8.2'
-  pod 'PINRemoteImage', '2.1.4'
+  pod 'AlamofireImage', '3.6.0'
   pod 'Firebase'
   pod 'Firebase/Analytics'
   pod 'Firebase/Messaging'
@@ -14,6 +14,7 @@ def all_pods
   pod 'FirebaseInstanceID', '2.0.0'
   pod 'MarqueeLabel'
   pod 'MKToolTip'
+  pod 'Protobuf', '3.11.4'
 
 end
 
