Update Firebase versions

--- a/RTRS/Podfile
+++ b/RTRS/Podfile
@@ -7,10 +7,11 @@ def all_pods
   pod 'SwiftSoup', '2.2.0'
   pod 'Atributika', '4.8.2'
   pod 'Firebase'
+  pod 'Firebase/Crashlytics'
   pod 'Firebase/Analytics'
   pod 'Firebase/Messaging'
   pod 'Firebase/Database'
-  pod 'FirebaseInstanceID', '2.0.0'
+  pod 'FirebaseInstanceID'
   pod 'MarqueeLabel'
   pod 'MKToolTip'
   pod 'Protobuf', '3.11.4'
