--- a/RTRS/RTRS/Info.plist
+++ b/RTRS/RTRS/Info.plist
@@ -15,7 +15,7 @@
 	<key>RTRSBaseURL</key>
 	<string>https://www.rightstorickysanchez.com/</string>
 	<key>CFBundleVersion</key>
-	<string>1.05</string>
+	<string>1.07</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -24,14 +24,14 @@
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.04</string>
 	<key>RTRSConfigURL</key>
 	<string>https://firebasestorage.googleapis.com/v0/b/rights-to-ricky-sanchez.appspot.com/o/RTRSConfig.json?alt=media&amp;token={{TOKEN}}</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.04</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -45,6 +45,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>BitlyAccessToken</key>
+	<string>f7916216fac500f0cd358971fddb8399330ddb9f</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -56,6 +58,8 @@
 	<array>
 		<string>com.SO.apprefresh</string>
 	</array>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -67,8 +71,6 @@
 			</array>
 		</dict>
 	</array>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
