--- a/RTRS/RTRS/Info.plist
+++ b/RTRS/RTRS/Info.plist
@@ -15,7 +15,7 @@
 	<key>RTRSBaseURL</key>
 	<string>https://www.rightstorickysanchez.com/</string>
 	<key>CFBundleVersion</key>
-	<string>1.07</string>
+	<string>1.08</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -24,14 +24,14 @@
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.04</string>
 	<key>RTRSConfigURL</key>
 	<string>https://firebasestorage.googleapis.com/v0/b/rights-to-ricky-sanchez.appspot.com/o/RTRSConfig.json?alt=media&amp;token={{TOKEN}}</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.04</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -79,5 +79,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UILocalNotificationDefaultSoundName</key>
+	<string>ricky.aiff</string>
 </dict>
 </plist>
