--- a/RTRS/RTRSConfig.json
+++ b/RTRS/RTRSConfig.json
@@ -40,14 +40,15 @@
                 "Summer Vacation: The Ricky Rebroadcasts",
                 "Bus/Fly The Process III: Operation Shithole",
                 "Mike Levin's \"The Process Is The Most Dramatic Thing In Sports History\" Recap",
-                "[05.16.17] The Lottery Party Podcasts",
+                "The Lottery Party Podcasts",
+                "EVENT: Live Rights To Ricky Sanchez featuring TJ McConnell at Underground Arts",
                 "2017 Lottery Party T-Shirts",
                 "2017 Lottery Party Recap, Podcasts And Links #SamsTown",
                 "Contest: Get Engaged At The Lottery Party With LL Pavorsky",
                 "2017 Process, Hinkie Related Christmas Gifts",
                 "Bus The Process II: Rights To Ricky Sanchez Bus Trip To D.C. (F*ck Andrew Sharp)",
                 "Apply To Be A Fan Representative In The Retweet Armageddon Congress",
-                "Spike: Remembering Kobe Bryant"
+                "Spike: Remembering Kobe Bryant",
             ],
             "links": ["https://www.rightstorickysanchez.com/podcast",
                     "https://www.rightstorickysanchez.com/podcast?page=2",
